--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/ananke"]
 	path = themes/ananke
 	url = https://github.com/theNewDynamic/gohugo-theme-ananke.git
+[submodule "themes/dead-simple"]
+	path = themes/dead-simple
+	url = https://github.com/barklan/hugo-dead-simple.git
