--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,4 @@
 [submodule "themes/dead-simple"]
 	path = themes/dead-simple
 	url = https://github.com/barklan/hugo-dead-simple.git
+	branch = main
