--- a/hugo.yaml
+++ b/hugo.yaml
@@ -9,8 +9,11 @@ menu:
       url: /
       weight: 1
     - name: "posts"
-      url: /posts
+      url: /writing
       weight: 2
+    - name: "reading"
+      url: /reading
+      weight: 3
     #    - name: "Resume"
     #      url: /
     #      weight: 3
